Refactor case study and video sections to utilize full-width content layout for improved visual presentation. Update styles for mobile responsiveness and enhance the "Why Choose" sections for better user engagement. Remove unnecessary grid structure for a cleaner design.

--- a/case-study.html
+++ b/case-study.html
@@ -102,33 +102,31 @@
     <!-- Main Content -->
     <section class="main-content">
         <div class="container">
-            <div class="content-grid">
-                <!-- Left Column -->
-                <div class="content-left">
-                    <div class="doctor-image">
-                        <img src="images/Docinoffice.jpg" alt="Dr. Bipin Solanki - Orthopedic Specialist">
-                    </div>
-                    <div class="content-text">
-                        <h2>Real Patient Success Stories</h2>
-                        <h3>Transforming Lives Through Expert Orthopedic Care</h3>
-                        <p><strong>Dr. Bipin Solanki</strong> has successfully treated thousands of patients with various orthopedic conditions. Our case studies showcase <strong>real patient experiences, treatment outcomes, and recovery journeys</strong> that demonstrate the effectiveness of our comprehensive orthopedic care.</p>
-                        <p>From <strong>complex joint replacements to minimally invasive arthroscopic procedures</strong>, each case study represents a unique story of pain relief, restored mobility, and improved quality of life. These testimonials provide insight into <strong>treatment approaches, recovery timelines, and long-term outcomes</strong> at BBC Best Bone Clinic.</p>
-                    </div>
+            <!-- Full Width Content -->
+            <div class="full-width-content">
+                <div class="doctor-image">
+                    <img src="images/Docinoffice.jpg" alt="Dr. Bipin Solanki - Orthopedic Specialist">
                 </div>
-                
-                <!-- Right Column -->
-                <div class="content-right">
-                    <div class="why-choose-card">
-                        <h3>Why Read Our Case Studies?</h3>
-                        <ul>
-                            <li>✅ <strong>Real Patient Stories</strong> with authentic experiences</li>
-                            <li>✅ <strong>Detailed Treatment Plans</strong> and procedures</li>
-                            <li>✅ <strong>Before & After Results</strong> with visual evidence</li>
-                            <li>✅ <strong>Recovery Timelines</strong> and rehabilitation progress</li>
-                            <li>✅ <strong>Patient Satisfaction</strong> and quality of life improvements</li>
-                            <li>✅ <strong>Expert Medical Insights</strong> from Dr. Bipin Solanki</li>
-                        </ul>
-                    </div>
+                <div class="content-text">
+                    <h2>Real Patient Success Stories</h2>
+                    <h3>Transforming Lives Through Expert Orthopedic Care</h3>
+                    <p><strong>Dr. Bipin Solanki</strong> has successfully treated thousands of patients with various orthopedic conditions. Our case studies showcase <strong>real patient experiences, treatment outcomes, and recovery journeys</strong> that demonstrate the effectiveness of our comprehensive orthopedic care.</p>
+                    <p>From <strong>complex joint replacements to minimally invasive arthroscopic procedures</strong>, each case study represents a unique story of pain relief, restored mobility, and improved quality of life. These testimonials provide insight into <strong>treatment approaches, recovery timelines, and long-term outcomes</strong> at BBC Best Bone Clinic.</p>
+                </div>
+            </div>
+            
+            <!-- Why Choose Card -->
+            <div class="why-choose-section">
+                <div class="why-choose-card">
+                    <h3>Why Read Our Case Studies?</h3>
+                    <ul>
+                        <li><strong>Real Patient Stories</strong> with authentic experiences</li>
+                        <li><strong>Detailed Treatment Plans</strong> and procedures</li>
+                        <li><strong>Before & After Results</strong> with visual evidence</li>
+                        <li><strong>Recovery Timelines</strong> and rehabilitation progress</li>
+                        <li><strong>Patient Satisfaction</strong> and quality of life improvements</li>
+                        <li><strong>Expert Medical Insights</strong> from Dr. Bipin Solanki</li>
+                    </ul>
                 </div>
             </div>
         </div>
