--- a/patient-testimonials.html
+++ b/patient-testimonials.html
@@ -121,12 +121,12 @@
                     <div class="why-choose-card">
                         <h3>Why Trust Our Testimonials?</h3>
                         <ul>
-                            <li>✅ <strong>Real Patient Stories</strong> with authentic experiences</li>
-                            <li>✅ <strong>Verified Outcomes</strong> and documented results</li>
-                            <li>✅ <strong>Before & After</strong> evidence and progress</li>
-                            <li>✅ <strong>Diverse Cases</strong> covering various conditions</li>
-                            <li>✅ <strong>Long-term Follow-ups</strong> and sustained results</li>
-                            <li>✅ <strong>Patient Consent</strong> for sharing experiences</li>
+                            <li><strong>Real Patient Stories</strong> with authentic experiences</li>
+                            <li><strong>Verified Outcomes</strong> and documented results</li>
+                            <li><strong>Before & After</strong> evidence and progress</li>
+                            <li><strong>Diverse Cases</strong> covering various conditions</li>
+                            <li><strong>Long-term Follow-ups</strong> and sustained results</li>
+                            <li><strong>Patient Consent</strong> for sharing experiences</li>
                         </ul>
                     </div>
                 </div>
