--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -121,12 +121,12 @@
                     <div class="why-choose-card">
                         <h3>Our Privacy Commitments</h3>
                         <ul>
-                            <li>✅ <strong>Confidentiality</strong> of all medical information</li>
-                            <li>✅ <strong>Secure Storage</strong> of personal data</li>
-                            <li>✅ <strong>Limited Access</strong> to authorized personnel only</li>
-                            <li>✅ <strong>Patient Consent</strong> for information sharing</li>
-                            <li>✅ <strong>Legal Compliance</strong> with privacy laws</li>
-                            <li>✅ <strong>Regular Updates</strong> to privacy practices</li>
+                            <li><strong>Confidentiality</strong> of all medical information</li>
+                            <li><strong>Secure Storage</strong> of personal data</li>
+                            <li><strong>Limited Access</strong> to authorized personnel only</li>
+                            <li><strong>Patient Consent</strong> for information sharing</li>
+                            <li><strong>Legal Compliance</strong> with privacy laws</li>
+                            <li><strong>Regular Updates</strong> to privacy practices</li>
                         </ul>
                     </div>
                 </div>
