--- a/videos.html
+++ b/videos.html
@@ -102,33 +102,31 @@
     <!-- Main Content -->
     <section class="main-content">
         <div class="container">
-            <div class="content-grid">
-                <!-- Left Column -->
-                <div class="content-left">
-                    <div class="doctor-image">
-                        <img src="images/Docinoffice.jpg" alt="Dr. Bipin Solanki - Orthopedic Video Specialist">
-                    </div>
-                    <div class="content-text">
-                        <h2>Expert Orthopedic Videos</h2>
-                        <h3>Educational Content & Patient Success Stories</h3>
-                        <p><strong>Dr. Bipin Solanki</strong> shares his expertise through comprehensive video content covering <strong>joint replacement procedures, arthroscopic surgeries, trauma care, and patient recovery stories</strong>. Our video library provides valuable insights into <strong>orthopedic treatments, surgical techniques, and rehabilitation processes</strong>.</p>
-                        <p>From <strong>pre-operative consultations to post-surgery recovery</strong>, our videos help patients understand their treatment options and what to expect during their orthopedic journey. Watch real patient testimonials and learn about <strong>advanced orthopedic procedures</strong> performed at BBC Best Bone Clinic.</p>
-                    </div>
+            <!-- Full Width Content -->
+            <div class="full-width-content">
+                <div class="doctor-image">
+                    <img src="images/Docinoffice.jpg" alt="Dr. Bipin Solanki - Orthopedic Video Specialist">
                 </div>
-                
-                <!-- Right Column -->
-                <div class="content-right">
-                    <div class="why-choose-card">
-                        <h3>Why Watch Our Videos?</h3>
-                        <ul>
-                            <li>✅ <strong>Expert Insights</strong> from Dr. Bipin Solanki</li>
-                            <li>✅ <strong>Real Patient Stories</strong> and testimonials</li>
-                            <li>✅ <strong>Educational Content</strong> about procedures</li>
-                            <li>✅ <strong>Pre & Post-Surgery</strong> guidance</li>
-                            <li>✅ <strong>Latest Techniques</strong> in orthopedic care</li>
-                            <li>✅ <strong>Recovery Tips</strong> and rehabilitation advice</li>
-                        </ul>
-                    </div>
+                <div class="content-text">
+                    <h2>Expert Orthopedic Videos</h2>
+                    <h3>Educational Content & Patient Success Stories</h3>
+                    <p><strong>Dr. Bipin Solanki</strong> shares his expertise through comprehensive video content covering <strong>joint replacement procedures, arthroscopic surgeries, trauma care, and patient recovery stories</strong>. Our video library provides valuable insights into <strong>orthopedic treatments, surgical techniques, and rehabilitation processes</strong>.</p>
+                    <p>From <strong>pre-operative consultations to post-surgery recovery</strong>, our videos help patients understand their treatment options and what to expect during their orthopedic journey. Watch real patient testimonials and learn about <strong>advanced orthopedic procedures</strong> performed at BBC Best Bone Clinic.</p>
+                </div>
+            </div>
+            
+            <!-- Why Choose Card -->
+            <div class="why-choose-section">
+                <div class="why-choose-card">
+                    <h3>Why Watch Our Videos?</h3>
+                    <ul>
+                        <li><strong>Expert Insights</strong> from Dr. Bipin Solanki</li>
+                        <li><strong>Real Patient Stories</strong> and testimonials</li>
+                        <li><strong>Educational Content</strong> about procedures</li>
+                        <li><strong>Pre & Post-Surgery</strong> guidance</li>
+                        <li><strong>Latest Techniques</strong> in orthopedic care</li>
+                        <li><strong>Recovery Tips</strong> and rehabilitation advice</li>
+                    </ul>
                 </div>
             </div>
         </div>
