Update contact page to include two hospital addresses with interactive map links for improved user accessibility. Enhance footer contact information with clickable links to both locations, ensuring better navigation and visibility.

--- a/contact.html
+++ b/contact.html
@@ -100,7 +100,16 @@
                         <div class="contact-item">
                             <div class="contact-icon">📍</div>
                             <div class="contact-text">
-                                <h4>Address</h4>
+                                <h4>Address 1</h4>
+                                <p>BBC Best Bone Clinic<br>Apollo Spectra Hospitals, Greater Kailash, New Delhi</p>
+                                <a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">📍 View on Google Maps</a>
+                            </div>
+                        </div>
+                        
+                        <div class="contact-item">
+                            <div class="contact-icon">📍</div>
+                            <div class="contact-text">
+                                <h4>Address 2</h4>
                                 <p>BBC Best Bone Clinic<br>Yupiter Hospital, Green Park Extension, New Delhi</p>
                                 <a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">📍 View on Google Maps</a>
                             </div>
@@ -226,7 +235,11 @@
                     <h4>Our Clinic</h4>
                     <div class="footer-contact-info">
                         <i>📍</i>
-                        <span>Yupiter Hospital, Green Park Extension, New Delhi</span>
+                        <span><a href="https://maps.app.goo.gl/gi4SNtTcK7f6exES7" target="_blank" rel="noopener" class="map-link">Apollo Spectra Hospitals, Greater Kailash, New Delhi</a></span>
+                    </div>
+                    <div class="footer-contact-info">
+                        <i>📍</i>
+                        <span><a href="https://maps.app.goo.gl/3MmSdmw9So3xGZUG6" target="_blank" rel="noopener" class="map-link">Yupiter Hospital, Green Park Extension, New Delhi</a></span>
                     </div>
                     <div class="footer-contact-info">
                         <i>📞</i>
