--- a/patient-testimonials.html
+++ b/patient-testimonials.html
@@ -21,26 +21,18 @@
                 <span>📞 <a href="tel:+919717289689" class="phone-link">+91 9717289689</a></span>
             </div>
             <div class="social-links">
-                <a href="#" aria-label="Facebook" title="Facebook">
+                <a href="https://www.facebook.com/people/Free-Orthopedic-Teleconsultations-by-Dr-BIPIN/100064004621728/" aria-label="Facebook" title="Facebook" target="_blank" rel="noopener">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path d="M22 12.06C22 6.49 17.52 2 12 2S2 6.49 2 12.06C2 17.09 5.66 21.21 10.44 22v-7.03H7.9v-2.91h2.54V9.84c0-2.5 1.49-3.88 3.77-3.88 1.09 0 2.23.2 2.23.2v2.45h-1.26c-1.24 0-1.63.77-1.63 1.56v1.87h2.78l-.44 2.91h-2.34V22C18.34 21.21 22 17.09 22 12.06Z" fill="#FFFFFF"/>
                     </svg>
                 </a>
-                <a href="#" aria-label="YouTube" title="YouTube">
-                    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <path d="M23.5 6.2a3.14 3.14 0 0 0-2.2-2.22C19.4 3.5 12 3.5 12 3.5s-7.4 0-9.3.48A3.14 3.14 0 0 0 .5 6.2 33.46 33.46 0 0 0 0 12a33.46 33.46 0 0 0 .5 5.8 3.14 3.14 0 0 0 2.2 2.22C4.6 20.5 12 20.5 12 20.5s7.4 0 9.3-.48a3.14 3.14 0 0 0 2.2-2.22A33.46 33.46 0 0 0 24 12a33.46 33.46 0 0 0-.5-5.8ZM9.75 15.02V8.98L15.5 12l-5.75 3.02Z" fill="#FFFFFF"/>
-                    </svg>
-                </a>
+
                 <a href="https://www.instagram.com/drbipinsolanki" aria-label="Instagram" title="Instagram" target="_blank" rel="noopener">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
                         <path d="M12 2.16c3.2 0 3.58.01 4.85.07 1.17.05 1.8.24 2.22.4.56.22.96.48 1.38.9.42.42.68.82.9 1.38.16.42.35 1.05.4 2.22.06 1.27.07 1.65.07 4.85s-.01 3.58-.07 4.85c-.05 1.17-.24 1.8-.4 2.22a3.56 3.56 0 0 1-.9 1.38 3.56 3.56 0 0 1-1.38.9c-.42.16-1.05.35-2.22.4-1.27.06-1.65.07-4.85.07s-3.58-.01-4.85-.07c-1.17-.05-1.8-.24-2.22-.4a3.56 3.56 0 0 1-1.38-.9 3.56 3.56 0 0 1-.9-1.38c-.16-.42-.35-1.05-.4-2.22C2.17 15.58 2.16 15.2 2.16 12s.01-3.58.07-4.85c.05-1.17.24-1.8.4-2.22.22-.56.48-.96.9-1.38.42-.42.82-.68 1.38-.9.42-.16 1.05-.35 2.22-.4C8.42 2.16 8.8 2.16 12 2.16Zm0 1.62c-3.16 0-3.53.01-4.77.07-.98.04-1.51.21-1.86.34-.47.18-.81.4-1.17.77-.37.36-.59.7-.77 1.17-.13.35-.3.88-.34 1.86-.06 1.24-.07 1.61-.07 4.77s.01 3.53.07 4.77c.04.98.21 1.51.34 1.86.18.47.4.81.77 1.17.36.37.7.59 1.17.77.35.13.88.3 1.86.34 1.24.06 1.61.07 4.77.07s3.53-.01 4.77-.07c.98-.04 1.51-.21 1.86-.34.47-.18.81-.4 1.17-.77.37-.36.59-.7.77-1.17.13-.35.3-.88.34-1.86.06-1.24.07-1.61.07-4.77s-.01-3.53-.07-4.77c-.04-.98-.21-1.51-.34-1.86-.18-.47-.4-.81-.77-1.17a2.57 2.57 0 0 0-1.17-.77c-.35-.13-.88-.3-1.86-.34-1.24-.06-1.61-.07-4.77-.07Zm0 3.62a4.6 4.6 0 1 1 0 9.2 4.6 4.6 0 0 1 0-9.2Zm0 1.62a2.98 2.98 0 1 0 0 5.96 2.98 2.98 0 0 0 0-5.96Zm5.84-2.88a1.08 1.08 0 1 1 0 2.16 1.08 1.08 0 0 1 0-2.16Z" fill="#FFFFFF"/>
                     </svg>
                 </a>
-                <a href="#" aria-label="LinkedIn" title="LinkedIn">
-                    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-                        <path d="M4.98 3.5C4.98 4.88 3.86 6 2.5 6S0 4.88 0 3.5 1.12 1 2.5 1s2.48 1.12 2.48 2.5ZM.5 8.5h4V23h-4V8.5Zm7.5 0h3.84v1.98h.06c.54-1.02 1.86-2.1 3.83-2.1 4.09 0 4.85 2.69 4.85 6.19V23H16.8v-6.45c0-1.54-.03-3.52-2.15-3.52-2.16 0-2.49 1.68-2.49 3.4V23H8V8.5Z" fill="#FFFFFF"/>
-                    </svg>
-                </a>
+
             </div>
         </div>
     </div>
@@ -236,9 +228,8 @@
                     </div>
                     <p class="footer-text">In Orthopaedics International most of our patients wind up feeling like family. You'll always see Dr. Bipin when you come in for your appointment.</p>
                     <div class="footer-social">
-                        <a href="#" aria-label="Facebook">f</a>
-                        <a href="#" aria-label="Twitter">t</a>
-                        <a href="#" aria-label="LinkedIn">in</a>
+                        <a href="https://www.facebook.com/people/Free-Orthopedic-Teleconsultations-by-Dr-BIPIN/100064004621728/" aria-label="Facebook" target="_blank" rel="noopener">f</a>
+
                         <a href="https://www.instagram.com/drbipinsolanki" aria-label="Instagram" target="_blank" rel="noopener">ig</a>
                     </div>
                 </div>
