--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
             <div class="services-grid-tight">
                 <div class="service-list-card">
                     <div class="service-image">
-                        <img src="images/ot1.jpg" alt="Trauma & Emergency Care">
+                        <img src="images/replacement.jpg" alt="Trauma & Emergency Care">
                     </div>
                     <ul>
                         <li>Accident & emergency trauma care</li>
