--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Best Bone ClinicDr. Bipin Solanki - Best Trauma & Orthopedic Specialist in Delhi NCR</title>
     <link rel="icon" type="image/png" href="images/bbc-logo.png">
     <link rel="shortcut icon" type="image/png" href="images/bbc-logo.png">
+    <link rel="apple-touch-icon" href="images/bbc-logo.png">
+    <link rel="icon" type="image/x-icon" href="images/bbc-logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
