--- a/case-study.html
+++ b/case-study.html
@@ -344,7 +344,7 @@
                             <img src="images/bbc-logo.png" alt="BBC Best Bone Clinic" class="footer-logo-img">
                         </a>
                     </div>
-                    <p class="footer-text">In Orthopaedics International most of our patients wind up feeling like family. You'll always see Dr. Bipin when you come in for your appointment.</p>
+                    <p class="footer-text">In Best Bone Clinic most of our patients wind up feeling like family. You'll always see Dr. Bipin when you come in for your appointment.</p>
                     <div class="footer-social">
                         <a href="https://www.facebook.com/people/Free-Orthopedic-Teleconsultations-by-Dr-BIPIN/100064004621728/" aria-label="Facebook" target="_blank" rel="noopener">f</a>
 
